--- a/package.json
+++ b/package.json
@@ -12,23 +12,22 @@
   "author": "Griffin Ryan",
   "license": "MIT",
   "dependencies": {
-    "@chakra-ui/icons": "2.1.1",
-    "@chakra-ui/react": "2.8.1",
-    "@emotion/react": "11.11.1",
-    "@emotion/styled": "11.11.0",
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@react-pdf-viewer/default-layout": "^3.12.0",
-    "@vercel/analytics": "1.1.1",
-    "framer-motion": "10.16.4",
-    "image-js": "0.35.5",
-    "next": "^14.2.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "4.11.0",
+    "@chakra-ui/icons": "2.2.4",
+    "@chakra-ui/react": "2.10.4",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
+    "@vercel/analytics": "1.5.0",
+    "framer-motion": "11.14.4",
+    "image-js": "0.37.0",
+    "next": "14.2.30",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "5.5.0",
+    "react-pdf": "^9.1.1",
     "three": "0.178.0"
   },
   "devDependencies": {
-    "eslint": "^8.52.0",
-    "eslint-config-next": "^13.5.6"
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.30"
   }
 }
